--- a/Projects/style_p.css
+++ b/Projects/style_p.css
@@ -224,6 +224,23 @@ body{
     transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
   
+  .card__images
+  {
+    width: auto;
+    grid-template-columns: repeat(3, 1fr);
+    display: block;
+    float: center;
+    overflow: hidden;
+  }
+  .card__images img
+  {
+    display: inline-block;
+    align-content: center;
+    align-items: center;
+    align-self: center;
+    width: 1vw;
+  }
+
   .card:hover .card__content {
     transform: rotateX(0deg);
   }
