--- a/Projects/style_p.css
+++ b/Projects/style_p.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
 body{
     margin: 0;
     background-image: url(back.jpg);
@@ -5,6 +6,7 @@ body{
     background-size: 300vh 115vh ;
     /* background-size: 200vh 100vh; */
     background-repeat:no-repeat ;
+    background-color: #090909;
   }
   html{scroll-behavior:smooth}
   body::-webkit-scrollbar {
@@ -105,7 +107,7 @@ body{
     object-fit: cover;
     clip-path: polygon(0% 25%,0% 75%,50% 100%,100% 75%,100% 25%,50% 0);
     transform: translate(var(--_x,0),var(--_y,0)) scale(var(--_t,1));
-    cursor: pointer;
+    /* cursor: pointer; */
     filter: grayscale(70%);
     transition: .2s linear;
   }
@@ -153,7 +155,7 @@ body{
     /* margin-left: auto; */
     /* margin-right: auto; */
     position: relative;
-    height: 70vh;
+    height: 35vw;
     aspect-ratio: 3/4;
     background-color: #f2f2f2;
     border-radius: 10px;
@@ -161,11 +163,12 @@ body{
     /* align-items: center; */
     justify-content: center;
     overflow: hidden;
-    perspective: 1000px;
-    box-shadow: 0 0 0 5px #ffffff80;
+    /* perspective: 10px; */
+    box-shadow: 0 0 0 1px rgba(0,0,0,0.4);
     transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     background: rgba(0,0,0,0.001);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(7px);
+    /* cursor: pointer; */
   }
 
   .card div .profile {
@@ -199,12 +202,17 @@ body{
     box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
   }
 
+  .card:hover::after{
+    background-color: antiquewhite;
+    filter: none;
+  }
+
   .profile_heading {
     font-weight: bold;
     font-family: 'bungee', cursive;
-    padding-top: 10vh;
-    /* color: white; */
-    filter: invert(0%);
+    padding-top: 5vw;
+    color: white;
+    /* filter: invert(0%); */
     /* padding-left: 2vh; */
     text-align: center;
     position: absolute;
@@ -221,24 +229,50 @@ body{
     background-color: #f2f2f2;
     transform: rotateX(-90deg);
     transform-origin: bottom;
+    filter: invert(0%);
     transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    z-index: 0;
   }
-  
+
   .card__images
   {
-    width: auto;
-    grid-template-columns: repeat(3, 1fr);
-    display: block;
-    float: center;
-    overflow: hidden;
+    position: absolute;
+    height: 100%;
+    aspect-ratio: 3/4;
+    width: 100%;
+    z-index: -1;
+  }
+  .check{
+    margin: 5vw;
+    color: white;
+    font-size: 2vw;
+  }
+  .check a {
+    color: white;
+  }
+  .check a:hover {
+    color:aqua;
+    /* background-color:#04AA6D; */
   }
   .card__images img
   {
-    display: inline-block;
-    align-content: center;
-    align-items: center;
-    align-self: center;
-    width: 1vw;
+    /* padding-top: 50%; */
+    /* padding-left: 10%; */
+    /* opacity: 0.5; */
+    width: 8vw;
+    height: 8vw;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 0;
+  }
+
+  .card_img1 
+  {
+    position: relative;
+    margin-top:7vw; 
+    margin-left: 13vw;
+    opacity: 1;
+    z-index: -1;
   }
 
   .card:hover .card__content {
@@ -247,9 +281,10 @@ body{
   
   .card__title {
     margin: 0;
-    font-size: 20px;
+    font-size: 1.6vw;
     color: #333;
-    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bolder;
   }
   
   .card:hover svg {
@@ -258,23 +293,28 @@ body{
   
   .card__description {
     margin: 10px 0 10px;
-    font-size: 12px;
-    color: #777;
+    font-size: 1vw;
+    /* color: #777; */
     line-height: 1.4;
+    /* filter: invert(0%); */
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    background-color: inherit;
+    filter: none;
   }
   
-  .card__button {
+  .card__button{
+    margin-top: -2vw;
     padding: 15px;
     border-radius: 8px;
-    background: #777;
+    background: #777; 
     border: none;
-    color: white;
+
+    z-index: 1;
   }
-  
-  .secondary {
-    background: transparent;
-    color: #777;
-    border: 1px solid #777;
+  .card__button a{
+    color: white;
+    text-decoration: none;
   }
   
 .footer
