--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     background-color: #2b2d42;
+    /* cursor: pointer; */
   }
   html{scroll-behavior:smooth}
   body::-webkit-scrollbar {
