--- a/Projects/style_p.css
+++ b/Projects/style_p.css
@@ -240,7 +240,7 @@ body{
     height: 100%;
     aspect-ratio: 3/4;
     width: 100%;
-    z-index: -1;
+    z-index: 0;
   }
   .check{
     margin: 5vw;
@@ -272,7 +272,7 @@ body{
     margin-top:7vw; 
     margin-left: 13vw;
     opacity: 1;
-    z-index: -1;
+    /* z-index: 2; */
   }
 
   .card:hover .card__content {
