--- a/Projects/style_p.css
+++ b/Projects/style_p.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     background-image: url(back.jpg);
     /* background-attachment: fixed; */
-    background-size: 300vh 115vh ;
+    background-size: 100vw 60vw ;
     /* background-size: 200vh 100vh; */
     background-repeat:no-repeat ;
     background-color: #090909;
@@ -28,9 +28,9 @@ body{
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1vw 1.1vw;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 1.3vw;
   }
   
   .header li a:hover:not(.active) {
@@ -67,8 +67,8 @@ body{
     /* grid-template-columns: repeat(2, 1fr); */
     /* color: rgba(0,0,0,0.8); */
     font-family: "Bungee", cursive;
-    margin-left: 10vh;
-    margin-top: 10vh;
+    margin-left: 4vw;
+    margin-top: 4vw;
     background-color: inherit;
   }
     
@@ -76,20 +76,20 @@ body{
   .content .head2
   {
     margin-left: 2vh;
-    font-size: 20px;
+    font-size: 2vw;
   }
   .content .head1
   {
-    font-size: 30px;
+    font-size: 2.4vw;
   }
   .content li
   {
-    font-size: 15px;
+    font-size: 1.8vw;
   }
   .gallery {
     /* margin-left: 50vh; */
-    --s: 150px; /* control the size */
-    --g: 15px;  /* control the gap */
+    --s: 5vw; /* control the size */
+    --g: 1.8vw;  /* control the gap */
     display: grid;
     margin: calc(var(--s) + var(--g));
     margin:0;
@@ -138,7 +138,7 @@ body{
   
 
   .card_grid {
-    height: 100vh;
+    height: 50vw;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin-top: 0vh;
@@ -158,7 +158,7 @@ body{
     height: 35vw;
     aspect-ratio: 3/4;
     background-color: #f2f2f2;
-    border-radius: 10px;
+    border-radius: 1vw;
     display: flex;
     /* align-items: center; */
     justify-content: center;
@@ -173,11 +173,11 @@ body{
 
   .card div .profile {
     position: relative;
-    margin-top: 2vh;
+    margin-top: 1vw;
     margin-left: 0vh;
     padding-top: 0;
     padding-left: 0;
-    height: 250px;
+    height: 15vw;
     aspect-ratio: 1/1;
     background-color: #bbb;
     border-radius: 50%;
@@ -187,11 +187,11 @@ body{
   }
   
   .card .profile img{
-    height:45vh;
-    width: 45vh;
+    height:20vw;
+    width: 20vw;
     position: absolute;
-    margin-top: -7vh;
-    margin-left: -5vh;
+    margin-top: -3vw;
+    margin-left: -2vw;
     overflow: hidden;
     /* aspect-ratio:3/4; */
 
@@ -216,7 +216,7 @@ body{
     /* padding-left: 2vh; */
     text-align: center;
     position: absolute;
-    font-size: 30px;
+    font-size: 1.8vw;
   }
   .card__content {
     position: absolute;
@@ -224,7 +224,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 2vw;
     box-sizing: border-box;
     background-color: #f2f2f2;
     transform: rotateX(-90deg);
@@ -305,11 +305,11 @@ body{
   
   .card__button{
     margin-top: -2vw;
-    padding: 15px;
-    border-radius: 8px;
+    padding: 1.2vw;
+    border-radius: 1vw;
     background: #777; 
     border: none;
-
+    font-size: 1vw;
     z-index: 1;
   }
   .card__button a{
@@ -319,7 +319,7 @@ body{
   
 .footer
 {
-  margin-top: 10vh;
+  margin-top: 10vw;
   /* position: absolute; */
   bottom: 0;
   font-family: "Bungee", cursive;
@@ -327,19 +327,19 @@ body{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr;
-  font-size: 10px;
+  font-size: 1vw;
   color:#151515;
   background-color:rgba(249, 246, 238,0.7);
   /* opacity: 0.7; */
-  height: 20vh;
+  height: 10vw;
   width: 100%;
 }
 .footer_text
 {
-  font-size: 20px;
+  font-size: 1.7vw;
   text-align: center;
   text-decoration: none;
-  padding-top: 1vh;
+  padding-top: 0.5vw;
 }
 #links p a
 {
@@ -347,7 +347,7 @@ body{
   color: aliceblue;
   text-align: center;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 1vw;
   margin-left: 20vw;
 }
 #linkimg
@@ -355,8 +355,12 @@ body{
   /* align-content: baseline; */
   /* bottom: 2%; */
   /* right: 30vw; */
-  padding-left: 48vh;
+  padding-left: 20vw;
   display: flex;
-  gap: 20px;
-  size: 10px;
+  gap: 2vw;
+  size: 1vw;
+}
+#linkimg a img{
+  height: 3vw;
+  width: 3vw;
 }
