--- a/Organisation/style.css
+++ b/Organisation/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 body{
     margin: 0;
     background-color: #2b2d42;
@@ -82,19 +81,11 @@ body{
     color: rgb(85, 249, 252);
     
   }
-  .i{
+  #i{
     font-size: 2.9vw;
     color: rgb(66, 162, 251);
   }
-  .heading {
-    font-size: 3vw;
-    color: rgba(255, 255, 255, 0.901);
-    padding: 5vw;
-    padding-top: -5vw;
-    margin-top: -10vw;
-    font-family: 'Lilita One', cursive;
-    /* text-decoration: underline; */
-  }
+
   .content
   {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -106,44 +97,10 @@ body{
     color: rgba(255, 255, 255, 0.9);
     margin: 3vw;
     padding: 0;
-    height: 30vw;
-  }
-  .content div 
-  {
-    background-color: rgba(3, 2, 22, 0.412);
-    margin:1.5vw;
-    border-radius: 1vw;
-    height: 28.5vw;
-    /* transform: rotatey(15deg); */
-    
-    /* translate: 20px center; */
   }
 
   .content table {
     background-color: rgba(255,255,255,0.05);
-    border-radius: 1vw;
-    /* transform: rotatey(15deg); */
-  }
-  .otherskill
-  {
-    margin: 5vw;
-    margin-top: 1vw;
-  }
-  .otherskill ul
-  {
-    background-color: #2b2d42;
-  }
-  .otherskill ul li
-  {
-    font-family: 'Comfortaa', cursive;
-    /* background-color: #2b2d42; */
-    color: white;
-    margin: 1vw;
-    margin-left: 3vw;
-    margin-right: 2vw;
-    padding: 1.5vw;
-    font-size: 1.3vw;
-    background-color: rgba(0,0,0,0.1);
     border-radius: 1vw;
   }
 
